[package]
name = "io_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand = "0.8.5"
# Framerate control
# bevy_framepace = "0.3"
